# rubicx

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md
benches/: segment_pool_bench.rs
examples/oracle/: .gitignore  Cargo.toml
examples/oracle/src/: main.rs
src/: lib.rs
src/alloc/: error.rs  types.rs
src/cache/: mmap.rs  types.rs
src/filter/: basic.rs  bucket.rs  error.rs  types.rs
src/metric/: data.rs
src/ops/: types.rs
src/segment/: error.rs  graveyard.rs  mod.rs  pool.rs  segment.rs  types.rs
src/storage/: collector.rs  types.rs
